Consistent divider blocks

--- a/evenementen.html
+++ b/evenementen.html
@@ -86,7 +86,6 @@
                 
                 Interesse of vragen? Neem contact op met <b>Anna Palmann</b>: <a href="emailto:a.palmann@uva.nl">a.palmann@uva.nl</a>.
               </p>                 
-              <hr class="d-none d-lg-block mb-4 ml-0" />
               </div>
             </div>
 
@@ -94,6 +93,13 @@
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
                 <img src="images/dialogue_flyer_HH.pdf" class="img-fluid" alt="Dialogue hh flyer.">
             </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
       <!-- Nascholing -->
@@ -112,7 +118,6 @@
                 Locatie: UvA, UB, Vendelstraat 2-8, Amsterdam <br>
                 Tijd: 9:30 - 16:30
               </p>                 
-              <hr class="d-none d-lg-block mb-4 ml-0" />
               </div>
             </div>
 
@@ -121,7 +126,14 @@
             </div>
         </div>
 
-       <!-- Research days August -->
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
+       <!-- Research days September -->
         <div class="row align-items-start">
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
@@ -130,13 +142,19 @@
                 <p class="mb-2">
                     In september organiseerde SignLab Amsterdam twee onderzoeksdagen. Een van de onderzoeksdagen was op een dinsdag (9/9) en vond plaats op ons kantoor in het Bushuis van de UvA. De andere onderzoeksdag was op een zaterdag (13/9), en vond plaats bij het dovenontmoetingscentrum in Amsterdam. Op deze dagen hebben participanten deelgenomen in twee taalkundige onderzoeken. We hebben samen geluncht en koffie gedronken. We bedanken alle deelnemers die mee hebben gedaan met de onderzoeksdagen, jullie hulp is ontzettend waardevol!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
             </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
         <!-- SignLab Open Evening -->
@@ -148,7 +166,6 @@
                 <p class="mb-2">
                   Op 19 juni 2025 organiseerde SignLab Amsterdam de derde editie van de SignLab Open Avond op Science Park. De presentaties werden gegeven in Nederlandse Gebarentaal en in Internationale Gebarentaal, door onderzoekers van SignLab en door uitgenodigde internationale onderzoekers. We bedanken iedereen die aanwezig was voor hun interesse en kijken uit naar de volgende editie!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
@@ -156,6 +173,13 @@
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
                 <img src="images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025.">
             </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
         <!-- Research day May-->
@@ -167,7 +191,6 @@
                 <p class="mb-2">
                   Op dinsdag 13 mei 2025 organiseerde SignLab Amsterdam een onderzoeksdag. Tijdens deze dag kwamen onderzoeksdeelnemers naar Amsterdam om mee te doen aan twee taalkundige onderzoeken. Tussendoor hebben we samen geluncht en koffie gedronken. Het was een gezellige dag en een erg waardevolle bijdrage aan onze onderzoeken!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
@@ -176,6 +199,12 @@
             </div>
         </div>
 
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
 
         <!-- Reading and Sytorytelling competition-->
         <div class="row align-items-start">
@@ -187,7 +216,6 @@
                     De 28e editie van de Nationale LeesVertelWedstrijd vond plaats op zaterdag, 5 april bij TivoliVredenburg in Utrecht. 
                   The 28th edition of the National Reading and Storytelling Competition took place on Saturday, April 5th, at TivoliVredenburg in Utrecht. Leerlingen van dovenscholen uit heel Nederland vertoonden tijdens de grote finale hun vertelkunsten in de Nederlandse Gebarentaal. De finalisten streden op het grote podium voor de titel Beste verhalenverteller 2025. SignLab Amsterdam deed ook mee met een gebarenavatar die een sprookje vertelde. SignLab heeft ook een activiteit verzorgd waar studenten konden praten met de gebarenavatar. Aanwezigen waren erg enthousiast om onze avatar te ontmoeten en om er mee te praten.
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
@@ -196,6 +224,12 @@
             </div>
         </div>
 
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
 
         <!-- SignLab Open Evening -->
         <div class="row align-items-start">
@@ -206,7 +240,6 @@
                 <p class="mb-2">
                   Op 19 april 2024 organiseerde SignLab Amsterdam de tweede editie van de SignLab Open Avond in de Universiteitsbibliotheek. Verschillende onderzoekers gaven in Nederlandse Gebarentaal een presentatie over hun lopende onderzoeksprojecten. De avond was een groot succes: meer dan 80 mensen kwamen kennismaken met het werk dat we bij SignLab Amsterdam doen. 
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
