--- a/onderzoek.html
+++ b/onderzoek.html
@@ -70,7 +70,7 @@
         <div class="col-12 col-md order-2 ml-md-5">
           <div class="d-flex flex-column align-self-start">
             <div class="project-text pb-1 w-100 text-left textDIV">
-              <h3>Onderzoek samenvattingen</h3>
+              <h3>Onderzoekssamenvattingen</h3>
               <p class="mb-6 mt-6">
                 <br> Op deze pagina hebben we video's waarin we een aantal van onze onderzoeken uitleggen in Nederlandse Gebarentaal.
               </p>
@@ -84,6 +84,8 @@
       </div>
     </div>
 
+    <!-- Gebruik je zelf regelmatig NGT en zou je eens mee willen doen aan ons onderzoek of op een andere manier betrokken willen zijn? Kijk dan hier: [link naar doe mee]. Of klik [hier] voor samenvattingen van ons onderzoek in NGT.
+     Kaders om oproepen in dezelfde look als de banner, andere achtergrondkleur -->
 
       <!-- Challenge Row First two Signopsis videos-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
@@ -93,9 +95,8 @@
               <hr class="d-none d-lg-block mb-5 ml-0" />
               <h5>Pechakucha door Marloes Oomen</h5>
               <p class="mb-6 mt-6">
-                Marloes presenteerde haaar onderzoek over vraagzinnen in NGT tijdens de opening van het academisch jaar 2024-2025 van de faculteit der Geestenswetenschap van de UvA.<br>
-                <br>
-                 The presentation is in NGT met overgesproken tekst in het Nederlands.
+                Marloes presenteerde haar onderzoek over vraagzinnen in NGT tijdens de opening van het academisch jaar 2024-2025 van de faculteit der Geestenswetenschap van de UvA.<br>
+                De presentatie is in NGT met overgesproken tekst in het Nederlands.
               </p>
             </div>
             <div class="embed-responsive embed-responsive-16by9">
