--- a/outreach-events.html
+++ b/outreach-events.html
@@ -80,16 +80,22 @@
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                 <h5>Research Days September 2025</h5>
-                <p class="mb-2">
+                <p>
                   SignLab Amsterdam organized two research days in September. One research day was on a Tuesday (the 9th), and took place at our office in the Bushuis building. The other research day was on a Saturday (the 13th), and took place at the deaf meeting centre in Amsterdam. During these days, participants took part in two linguistic studies. We had lunch and coffee together during the day. We thank all the participants that took part in the research days, your help is very valuable to us!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
             </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
         <!-- SignLab Open Evening -->
@@ -98,17 +104,23 @@
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                 <h5>SignLab Open Evening 2025</h5>
-                <p class="mb-2">
+                <p>
                   On June 19th, 2025, SignLab Amsterdam hosted the third edition of the SignLab Open Evening at Science Park. Presentations were held in Dutch Sign Language and in International Sign, and were held by researchers from SignLab as well as by invited international researchers. We thank everyone that attended for their interest, and look forward to the next edition!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
             <!-- Column for picture -->
-            <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+            <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF">
                 <img src="images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025.">
             </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
         <!-- Research day May-->
@@ -116,11 +128,11 @@
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                
                 <h5>Research Day May 2025</h5>
-                <p class="mb-2">
+                <p>
                   On Tuesday, May 13, 2025, SignLab Amsterdam organized a research day. Participants came to Amsterdam to participate in two linguistic studies. We had lunch and coffee together during the day. It was a pleasant day and a very valuable contribution to our research!
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
               </div>
             </div>
 
@@ -129,23 +141,37 @@
             </div>
         </div>
 
+       <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
 
         <!-- Reading and Sytorytelling competition-->
         <div class="row align-items-start">
             <!-- Column for text -->
             <div class="col-12 col-md order-1">
-              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV mt-4">
                 <h5>Reading and Storytelling competition 2025</h5>
-                <p class="mb-2">
+                <p>
                   The 27th edition of the National Reading and Storytelling Competition took place on Saturday, April 5th, at TivoliVredenburg in Utrecht. Students from deaf schools across the Netherlands showcased their storytelling skills in Dutch Sign Language during the grand finale. The finalists competed on the main stage for the title of Best Storyteller of 2025. SignLab Amsterdam participated, using a sign language avatar that signed a fairy tale. Afterwards, SignLab also hosted an activity where students could converse in real time with the sign language avatar. Attendees were very excited to meet and talk to our avatar.
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
+                <!-- <hr class="d-none d-lg-block mb-4 ml-0 mt-3" /> -->
               </div>
             </div>
 
             <!-- Column for picture -->
             <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
             </div>
+        </div>
+
+       <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
 
 
@@ -155,10 +181,10 @@
             <div class="col-12 col-md order-1">
               <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                 <h5>SignLab Open Evening 2024</h5>
-                <p class="mb-2">
+                <p>
                   On April 19th, 2024, SignLab Amsterdam hosted the second edition of the SignLab Open Evening at the University Library. Multiple researchers presented in Dutch Sign Language about their ongoing research projects. The evening was a big success, more than 80 people came to learn about the work that we do at SignLab Amsterdam.
                 </p>
-                <hr class="d-none d-lg-block mb-4 ml-0 mt-3" />
+                <!-- <hr class="d-none d-lg-block mb-4 ml-0 mt-3" /> -->
               </div>
             </div>
 
