--- a/research-datasets.html
+++ b/research-datasets.html
@@ -81,39 +81,36 @@
         <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
               <h5>Global SignBank</h5>
-              <p class="mb-4">
+              <p>
                 Together with a team of developers at Radboud University in Nijmegen, we maintain and further develop the 
                 <a href="https://signbank.cls.ru.nl/" target="_blank">Global Signbank</a> platform, 
                 which hosts online lexicons for many sign languages around the world. 
                 The platform was initially developed by Radboud University in Nijmegen. 
                 Main responsibility was transferred to SignLab Amsterdam in 2023. 
               </p>
-              <hr class="d-none d-lg-block mb-4 ml-0" />
           </div>
         </div>
 
          <!-- Column for images -->
         <div class="col-12 col-md-5 order-1 order-md-12">
-          <div class="mt-20">
-            <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-          </div>
+          <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
         </div>
       </div>
 
       <!-- Challenge row block-->
-      <!-- <div class="row align-items-start no-gutters  mb-lg-5">
-        <div class="project-text  w-100 text-left textDIV">
-          <hr class="d-none d-lg-block mb-0 ml-0" />
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
-      </div> -->
 
       <!-- The NGT lexicon -->
       <div class="row align-items-start">
         <!-- Column for text -->
-        <div class="col-12 col-md order-2 mb-4">
+        <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
               <h5>The NGT lexicon</h5>
-              <p class="mb-4">
+              <p>
                 We also maintain the 
                 <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank">NGT lexicon</a>
                 on Global Signbank, which was initially developed by Radboud University as well.
@@ -122,7 +119,6 @@
                 their possible interpretations (multiple senses and links to the Open Multilingual Wordnet),
                 and their usage (example sentences). We are still in the process of adding more signs and more information.
               </p>
-              <hr class="d-none d-lg-block mb-4 ml-0" />
           </div>
         </div>
 
@@ -131,11 +127,11 @@
       </div>
 
       <!-- Challenge row block-->
-      <!-- <div class="row align-items-start no-gutters  mb-lg-5">
-        <div class="project-text  w-100 text-left textDIV">
-          <hr class="d-none d-lg-block mb-0 ml-0" />
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
         </div>
-      </div> -->
 
       <!-- Experimental data -->
       <div class="row align-items-start">
@@ -143,20 +139,17 @@
         <div class="col-12 col-md order-2">
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
               <h5>Experimental data</h5>
-              <p class="mb-4">  
+              <p>  
                 Besides this large, general-purpose dataset, we are also collecting experimental data on specific constructions in NGT 
                 and other sign languages (French, Italian, German, Catalan, Turkish, Russian, and Filipino sign languages).
                 We make these datasets available to the research community via our
                 <a href="https://osf.io/rqcv7/" target="_blank">OSF repository</a>.
               </p>
-              <hr class="d-none d-lg-block mb-4 ml-0" />
             </div>
         </div>
         <!-- Column for images -->
         <div class="col-12 col-md-5 order-1 order-md-12">
-          <div class="mb-5 mt-4">
-            <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-          </div>
+          <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
         </div>
       </div>
     </div>
