--- a/research-methods.html
+++ b/research-methods.html
@@ -76,12 +76,12 @@
         </div>
 
         <!-- Data collection methods -->
-        <div class="row align-items-start no-gutters mb-lg-5">
+        <div class="row align-items-start">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Data collection methods</h5>
 
-                    <p class="mb-4">
+                    <p>
                       We have built a state-of-the-art <a href="https://arxiv.org/abs/2409.01901" target="_blank">motion capture</a> 
                       laboratory, where we obtain precise 3D measurements of the movements of signers.
                       We have also developed a new method to obtain fine-grained 3D measurements of the signer's 
@@ -90,7 +90,6 @@
                       Finally, we have developed several new experimental elicitation paradigms to obtain controlled data on specific 
                       constructions in sign languages.
                     </p>
-                    <hr class="d-none d-lg-block mb-4 ml-0" />            
                 </div>
             </div>
           
@@ -101,18 +100,18 @@
         </div>
 
         <!-- Challenge row block-->
-        <!-- <div class="row align-items-start no-gutters  mb-lg-5">
+        <div class="row align-items-start no-gutters mb-4">
           <div class="project-text  w-100 text-left textDIV">
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
-        </div> -->
+        </div>
 
         <!-- Data analysis methods -->
-        <div class="row align-items-start no-gutters mb-4">
+        <div class="row align-items-start">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Data analysis methods</h5>
-                    <p class="mb-4">
+                    <p>
                       We use machine learning techniques (e.g., clustering) to analyse data obtained with motion capture equipment 
                       and depth-cameras. 
                       We are also developing a 
@@ -120,7 +119,6 @@
                       of non-manual elements in sign language data, and methods to 
                       <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assess the reliability</a> of such annotations.
                     </p>
-                    <hr class="d-none d-lg-block mb-4 ml-0" />
                 </div>
             </div>
             
@@ -132,30 +130,27 @@
         </div>
 
         <!-- Challenge row block-->
-        <!-- <div class="row align-items-start no-gutters  mb-lg-5">
+        <div class="row align-items-start no-gutters mb-4">
           <div class="project-text  w-100 text-left textDIV">
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
-        </div> -->
+        </div>
 
         <!-- Visualization methods -->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Visualization methods</h5>
-                    <p class="mb-4">
+                    <p>
                       Drawing on recent developments in computer graphics and animation (e.g., virtual humans)
                       we are developing new methods to visualise our measurements and the results of our data analyses.
                     </p>
-                    <hr class="d-none d-lg-block mb-4 ml-0" />
                 </div>
             </div>
 
             <!-- Column for images -->
             <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-              <div class="mb-5">
-                <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank"><img src="images/blendshapes-to-avatar.png" class="img-fluid" alt="Two men, one in motion capture suit. Image taken from the video."></a>
-              </div>
+              <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank"><img src="images/blendshapes-to-avatar.png" class="img-fluid" alt="Two men, one in motion capture suit. Image taken from the video."></a>
             </div>                                          
         </div>
     </div>
