--- a/research-overview.html
+++ b/research-overview.html
@@ -81,7 +81,7 @@
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Four pillars</h5>
 
-                    <p class="mb-4">
+                    <p>
                       SignLab was founded with the general mission to pursue new foundations for scientific inquiry 
                       in sign language research and develop practical applications for sign language users and learners, 
                       leveraging recent developments in artificial intelligence, computer vision and computer graphics. 
@@ -93,7 +93,6 @@
                         <li><a href="research-applications.html">Applications</a></li>
                         </ul>
                     </p>
-                    <hr class="d-none d-lg-block mb-4 ml-0" />
                 </div>
             </div>
           
@@ -103,12 +102,19 @@
           </div>
         </div>
 
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
         <!-- A measurement revolution -->
         <div class="row align-items-start">
-            <div class="col-12 col-md order-2 mb-4">
+            <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>A measurement revolution</h5>
-                    <p class="mb-4">
+                    <p>
                       We believe that sign language research (and more generally, research on visual communication, 
                       also in spoken languages) is at the dawn of a 'measurement revolution', comparable for instance 
                       to the measurement revolutions that unfolded in astronomy and biology after the invention of the 
@@ -118,7 +124,6 @@
                       currently developing more fine-grained measurement instruments and techniques. This, we 
                       believe, will substantially accelerate progress in the field.
                     </p>
-                  <hr class="d-none d-lg-block mb-4 ml-0" />
                 </div>
             </div>
 
@@ -126,12 +131,19 @@
             <div class="col-12 col-md-5 order-1 order-md-12"></div>
         </div>
 
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters mb-4">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
         <!-- Five-year outlook -->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Five-year outlook</h5>
-                    <p class="mb-4">
+                    <p>
                       Over the next five years we intend to achieve the following:
                       <ul>
                           <li><strong>Methods</strong>: New methodological and technological foundations for data collection, 
@@ -150,7 +162,6 @@
                             immersive using augmented reality.</li>
                       </ul>
                     </p>
-                  <hr class="d-none d-lg-block mb-4 ml-0" />
                 </div>
             </div>
           
