--- a/news.html
+++ b/news.html
@@ -68,7 +68,7 @@
       <div class="row align-items-start mb-5">
         <div class="col-12 col-md order-2">
           <div class="project-text text-left pb-1 w-100 my-auto no-top-padding textDIV">
-            <h2 class="section-heading">News</h2>
+            <h2 class="section-heading mt-5">News</h2>
             <p>If you have any news to share here, please get in touch with <a href="mailto:l.d.esselink@uva.nl">Lyke Esselink</a>.</p>
             <hr class="d-none d-lg-block mb-4 ml-0" />
           </div>
