--- a/news.html
+++ b/news.html
@@ -261,7 +261,7 @@
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="js/avatar.js"></script>
 <!-- script for shared functions across all pages -->
-<script language="javascript" type="text/javascript" src="js/general.js"></script>
+<script language="javascript" type="text/javascript" src="js/navbar.js"></script>
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
 <!-- These variables are defined so that the dicts from the ZonMw project can be used -->
