--- a/research-theory.html
+++ b/research-theory.html
@@ -173,7 +173,7 @@
       <!-- =============================================== -->
 
       <!-- script for shared functions across all pages -->
-      <script language="javascript" type="text/javascript" src="js/general.js"></script>
+      <script language="javascript" type="text/javascript" src="js/navbar.js"></script>
     </div>
   </body>
 </html>
