--- a/outreach-events.html
+++ b/outreach-events.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Icon -->
-    <link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/hand-icon.png" />
 
     <!-- =============================================== -->
     <!-- Fonts -->
@@ -27,11 +27,11 @@
     <!-- CSS files -->
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Timepicker css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
     <!-- CSS file for bootstrap grayscale theme -->
-    <link rel="stylesheet" href="css/grayscalestyles.css">
+    <link rel="stylesheet" href="/css/grayscalestyles.css">
     <!-- CSS file for bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
