--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Icon -->
-    <link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/hand-icon.png" />
 
     <!-- =============================================== -->
     <!-- Fonts -->
@@ -27,9 +27,9 @@
     <!-- CSS files -->
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- CSS file for bootstrap grayscale theme -->
-    <link rel="stylesheet" href="css/grayscalestyles.css">
+    <link rel="stylesheet" href="/css/grayscalestyles.css">
     <!-- CSS file for bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -183,13 +183,13 @@
                 </div>
 
                 <!-- Embedded linkedin post -->
-                <div class="embed-responsive embed-responsive-16by9 mb-5">
+                <div class="embed-responsive embed-responsive-16by9 mb-5 mt-5">
                   <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?compact=1" title="ZinInNGT post" height="399" width="504" frameborder="0" allowfullscreen=""></iframe>
                 </div> 
 
                 <!-- UvA logo -->
                 <div class="mt-5">
-                  <img src="images/logo-uva.png" class="img-fluid" style="image-orientation:portrait;" alt="University of Amsterdam">
+                  <img src="/images/logo-uva.png" class="img-fluid" style="image-orientation:portrait;" alt="University of Amsterdam">
                 </div>
               </div>
             </div>
@@ -211,13 +211,13 @@
       <!-- Jquery JS is loaded in the beginning, see above -->
 
       <!-- jQuery -->
-      <script type="text/javascript" src="js/jquery.min.js"></script>
+      <script type="text/javascript" src="/js/jquery.min.js"></script>
       <!-- Bootstrap tooltips -->
-      <script type="text/javascript" src="js/popper.min.js"></script>
+      <script type="text/javascript" src="/js/popper.min.js"></script>
       <!-- Bootstrap core JavaScript -->
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="/js/bootstrap.min.js"></script>
       <!-- Grayscale theme JS-->
-      <script type="text/javascript" src="js/grayscalescript.js"></script>
+      <script type="text/javascript" src="/js/grayscalescript.js"></script>
       <!-- Javascript for smooth scrolling-->
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
       <!-- script for timepicker (makes the navbar work) -->
@@ -227,7 +227,7 @@
       <!-- =============================================== -->
 
       <!-- script for shared functions across all pages -->
-      <script language="javascript" type="text/javascript" src="js/navbar.js"></script>
+      <script language="javascript" type="text/javascript" src="/js/navbar.js"></script>
     </div>
   </body>
 </html>
