--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
+<link rel="icon" type="image/x-icon" href="/images/hand-icon.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
@@ -30,17 +30,17 @@
 <!-- CSS for Jquery autocomplete and tooltips -->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <!-- Timepicker css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
 <!-- CSS for question circle -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- CSS file for bootstrap grayscale theme -->
-<link rel="stylesheet" href="css/grayscalestyles.css">
+<link rel="stylesheet" href="/css/grayscalestyles.css">
 <!-- CSS file for flag icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
-<link rel="stylesheet" href="css/cwasa-reduced.css">
+<link rel="stylesheet" href="/css/cwasa-reduced.css">
 <!-- CSS file for bootstrap icons -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -229,7 +229,7 @@
 <!-- Jquery JS is loaded in the beginning, see above -->
 
 <!-- jQuery -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery.min.js"></script>
 
 <!-- jquery ui -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -241,29 +241,29 @@
 </script>
 
 <!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
+<script type="text/javascript" src="/js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
 
 <!-- Grayscale theme JS-->
-<script type="text/javascript" src="js/grayscalescript.js"></script>
+<script type="text/javascript" src="/js/grayscalescript.js"></script>
 <!-- Javascript for smooth scrolling-->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <!-- script for timepicker -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwasa/uva2021/cwa/allcsa.js"> </script>
+<script type="text/javascript" src="/cwasa/uva2021/cwa/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
 
 <!-- script for communication with and set up of the avatar -->
-<script language="javascript" type="text/javascript" src="js/avatar.js"></script>
+<script language="javascript" type="text/javascript" src="/js/avatar.js"></script>
 <!-- script for shared functions across all pages -->
-<script language="javascript" type="text/javascript" src="js/navbar.js"></script>
+<script language="javascript" type="text/javascript" src="/js/navbar.js"></script>
 <!-- script specific to main page -->
-<script language="javascript" type="text/javascript" src="js/signlab.js"></script>
+<script language="javascript" type="text/javascript" src="/js/signlab.js"></script>
 <!-- These variables are defined so that the dicts from the ZonMw project can be used -->
 <script type="text/javascript">
   var sentPath;
