--- a/research-theory.html
+++ b/research-theory.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Icon -->
-    <link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/hand-icon.png" />
 
     <!-- =============================================== -->
     <!-- Fonts -->
@@ -28,11 +28,11 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Timepicker css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
     <!-- CSS file for bootstrap grayscale theme -->
-    <link rel="stylesheet" href="css/grayscalestyles.css">
+    <link rel="stylesheet" href="/css/grayscalestyles.css">
     <!-- CSS file for bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -158,13 +158,13 @@
       <!-- Jquery JS is loaded in the beginning, see above -->
 
       <!-- jQuery -->
-      <script type="text/javascript" src="js/jquery.min.js"></script>
+      <script type="text/javascript" src="/js/jquery.min.js"></script>
       <!-- Bootstrap tooltips -->
-      <script type="text/javascript" src="js/popper.min.js"></script>
+      <script type="text/javascript" src="/js/popper.min.js"></script>
       <!-- Bootstrap core JavaScript -->
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="/js/bootstrap.min.js"></script>
       <!-- Grayscale theme JS-->
-      <script type="text/javascript" src="js/grayscalescript.js"></script>
+      <script type="text/javascript" src="/js/grayscalescript.js"></script>
       <!-- Javascript for smooth scrolling-->
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
       <!-- script for timepicker -->
@@ -173,7 +173,7 @@
       <!-- =============================================== -->
 
       <!-- script for shared functions across all pages -->
-      <script language="javascript" type="text/javascript" src="js/navbar.js"></script>
+      <script language="javascript" type="text/javascript" src="/js/navbar.js"></script>
     </div>
   </body>
 </html>
