Add Taal on Tour

--- a/outreach-events.html
+++ b/outreach-events.html
@@ -65,6 +65,30 @@
                 </div>
             </div>
 
+            <!-- Taal on Tour -->
+            <div class="row align-items-start">
+              <!-- Column for text -->
+              <div class="col-12 col-md order-1">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5>Taal (Language) on Tour 2025</h5>
+                  <p>
+                    Radboud University is collaborating with IMC Weekendschool on Taal on Tour, an educational program that introduces newcomer children to the field of linguistics. Newcomer children — those from refugee, asylum-seeking, or labor migrant families — often have limited proficiency in Dutch, which can lead to learning gaps and fewer opportunities to engage with science compared to their peers.<br>
+                    Taal on Tour aims to bridge this gap and to help children gain more enjoyment and confidence in language by offering science lessons specifically designed for newcomer children aged 9 to 14 at various locations across the country. The lessons are taught by researchers from different areas within linguistics. Within this project, Jos Ritmeester from SignLab teaches classes on sign language linguistics, in which students explore whether all signs in sign language are iconic.
+                  </p>
+                </div>
+              </div>
+
+              <!-- Column for picture -->
+              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5"></div>
+            </div>
+
+            <!-- Challenge row block-->
+            <div class="row align-items-start no-gutters mb-4">
+              <div class="project-text  w-100 text-left textDIV">
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+              </div>
+            </div>
+
             <!-- Research days August -->
             <div class="row align-items-start">
               <!-- Column for text -->
