--- a/voor-ngt-evenementen.html
+++ b/voor-ngt-evenementen.html
@@ -123,6 +123,30 @@
               </div>
             </div>
 
+            <!-- Taal on Tour -->
+            <div class="row align-items-start">
+              <!-- Column for text -->
+              <div class="col-12 col-md order-1">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5><b>Taal on Tour 2025</b></h5>
+                  <p>
+                    De Radboud Universiteit werkt samen met IMC Weekendschool aan het project Taal on Tour, een lesprogramma dat nieuwkomerskinderen laat kennismaken met taalwetenschap. Nieuwkomerskinderen — kinderen van vluchtelingen, statushouders en arbeidsmigranten — hebben vaak een beperkte beheersing van het Nederlands, waardoor ze sneller onderwijsachterstanden oplopen en minder vaak in aanraking komen met wetenschap dan leeftijdsgenoten.<br>
+                    Taal on Tour wil deze kloof verkleinen en kinderen meer plezier en zelfvertrouwen in taal geven door het verzorgen van wetenschapslessen die specifiek zijn gericht op nieuwkomerskinderen van 9 tot 14 jaar op verschillende locaties door het land. De lessen worden gegeven door wetenschappers uit diverse vakgebieden binnen de taalwetenschap. Zo verzorgt Jos Ritmeester van het SignLab lessen over gebarentaalwetenschap, waarin leerlingen onderzoeken of alle gebaren in gebarentaal iconisch zijn.
+                  </p>                 
+                </div>
+              </div>
+
+              <!-- Column for picture -->
+              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5"></div>
+            </div>
+
+            <!-- Challenge row block-->
+            <div class="row align-items-start no-gutters mb-4">
+              <div class="project-text w-100 text-left textDIV">
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+              </div>
+            </div>
+
             <!-- Research days September -->
             <div class="row align-items-start">
               <!-- Column for text -->
