add Taal on Tour

--- a/outreach-events.html
+++ b/outreach-events.html
@@ -79,7 +79,9 @@
               </div>
 
               <!-- Column for picture -->
-              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5"></div>
+              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+                <img src="/images/taal_on_tour.png" class="img-fluid" alt="Slide about Taal on Tour.">
+              </div>
             </div>
 
             <!-- Challenge row block-->
