--- a/outreach-events.html
+++ b/outreach-events.html
@@ -72,7 +72,7 @@
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                   <h5>Taal (Language) on Tour 2025</h5>
                   <p>
-                    Radboud University is collaborating with IMC Weekendschool on Taal on Tour, an educational program that introduces newcomer children to the field of linguistics. Newcomer children — those from refugee, asylum-seeking, or labor migrant families — often have limited proficiency in Dutch, which can lead to learning gaps and fewer opportunities to engage with science compared to their peers.<br>
+                    Radboud University is collaborating with Stichting Nieuw in Nederland on Taal on Tour, an educational program that introduces newcomer children to the field of linguistics. Newcomer children — those from refugee, asylum-seeking, or labor migrant families — often have limited proficiency in Dutch, which can lead to learning gaps and fewer opportunities to engage with science compared to their peers.<br>
                     Taal on Tour aims to bridge this gap and to help children gain more enjoyment and confidence in language by offering science lessons specifically designed for newcomer children aged 9 to 14 at various locations across the country. The lessons are taught by researchers from different areas within linguistics. Within this project, Jos Ritmeester from SignLab teaches classes on sign language linguistics, in which students explore whether all signs in sign language are iconic.
                   </p>
                 </div>
