--- a/outreach-events.html
+++ b/outreach-events.html
@@ -139,6 +139,32 @@
               </div>
             </div>
 
+
+            <!-- FODOK Family Day -->
+            <div class="row align-items-start">
+              <!-- Column for text -->
+              <div class="col-12 col-md order-1">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5>FODOK Family Day 2025</h5>
+                  <p>
+                    On June 14, the FODOK (Federation for Parents of Deaf Children) Family Day took place with the theme “A world of possibilities.” During this day, parents and children could take part in various fun, informative, and inspiring activities. The SignLab was also present to introduce children and their families to our sign language avatar. Children could have live conversations with the avatar, who also read a beautiful story in Dutch Sign Language. Our goal was to promote sign language in a fun and interactive way and to demonstrate ways to improve accessibility for deaf and hard-of-hearing.
+                  </p>
+                </div>
+              </div>
+
+              <!-- Column for picture -->
+              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF">
+                  <!-- <img src="images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025."> -->
+              </div>
+            </div>
+
+            <!-- Challenge row block-->
+            <div class="row align-items-start no-gutters mb-4">
+              <div class="project-text w-100 text-left textDIV">
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+              </div>
+            </div>
+
             <!-- Research day May-->
             <div class="row align-items-start">
               <!-- Column for text -->
