--- a/voor-ngt-evenementen.html
+++ b/voor-ngt-evenementen.html
@@ -197,6 +197,32 @@
               </div>
             </div>
 
+
+             <!-- FODOK -->
+            <div class="row align-items-start">
+              <!-- Column for text -->
+              <div class="col-12 col-md order-1">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5>FODOK Familiedag 2025</h5>
+                  <p class="mb-2">
+                    Op 14 juni vond de FODOK (Federatie voor Ouders van Dove Kinderen) Familiedag plaats met als thema “Een wereld van mogelijkheden”. Tijdens deze dag konden ouders en kinderen deelnemen aan allerlei leuke, informatieve en inspirerende activiteiten. Ook het SignLab was aanwezig om kinderen en hun familie kennis te laten maken met onze gebarentaalavatar. Kinderen konden live gesprekken voeren met de avatar, die bovendien ook een mooi boek in Nederlandse Gebarentaal voorlas. Ons doel was om gebarentaal op een leuke en interactieve manier te stimuleren en te laten zien hoe toegankelijkheid voor dove en slechthorende kinderen vergroot kan worden.
+                  </p>
+                </div>
+              </div>
+
+              <!-- Column for picture -->
+              <div class="col-12 col-md-5 order-2 order-md-12 avatarGIF ml-md-5">
+                <!-- <img src="/images/OpenAvond2025.jpg" class="img-fluid" alt="Open evening 2025."> -->
+              </div>
+            </div>
+
+            <!-- Challenge row block-->
+            <div class="row align-items-start no-gutters mb-4">
+              <div class="project-text w-100 text-left textDIV">
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+              </div>
+            </div>
+
             <!-- Research day May-->
             <div class="row align-items-start">
               <!-- Column for text -->
