--- a/people.html
+++ b/people.html
@@ -89,7 +89,7 @@
                     Permanent staff
                   </h5>
                   <p class="text-black-50 mb-3">
-                    <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT)<br>
+                    <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Lecturer NGT and Research Support)<br>
                     <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Sign Linguistics and Language Acquisition)<br>
                     <a href="https://www.illc.uva.nl/People/person/4556/Dr-James-Paul-Trujillo" target="_blank">James Trujillo</a> (Assistant Professor Visual Communication)<br>
                   </p>
@@ -100,7 +100,6 @@
                   <p class="text-black-50 mb-3">
                     <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Project: Questions - Postdoc)<br>
                     Lisa Gierman (Project: Health - Guest staff) <br>                      
-                    <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: Questions / Reference - Staff)<br>
                     <a href="https://www.illc.uva.nl/People/person/5645/Annika-Schiefner" target="_blank">Annika Schiefner</a> (Project: SignBeach - Postdoc)<br>
                   </p>
 
@@ -116,21 +115,18 @@
                     PhD candidates
                   </h5>
                   <p class="text-black-50 mb-3">
-                    <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (AI and Sign Linguistics)<br>
-                    <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (Sign Linguistics)<br>
-                    <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (Sign Linguistics)<br>
+                    <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (Computational Sign Language Linguistics)<br>
+                    <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (Sign Language Linguistics)<br>
                     <a href="https://www.illc.uva.nl/People/person/5642/Anna-Palmann" target="_blank">Anna Palmann</a> (Multimodal Communication)<br>
                     <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
                   </p>
 
-                  <h5>
+                  <!-- <h5>
                     Master and bachelor students with ongoing thesis projects
                   </h5>
                   <p class="text-black-50 mb-3">
-                    Zhengdan Xia (MSc Information Studies)<br>
-                    Amina Izbassar (MSc AI)<br>
-                    Mabel Traube (BSc AI)<br>
-                  </p>
+                    
+                  </p> -->
 
                   <h5>
                     Lab manager
@@ -161,6 +157,7 @@
                   PhD alumni
                 </h5>
                 <p class="text-black-50 mb-3">
+                  <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (2025)<br>
                   <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (2024)<br>
                   <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021) <b>Winner Best Dissertation Award, Dutch Linguistics Association</b><br>
                   <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
@@ -170,6 +167,12 @@
                 <h5>
                   Master and bachelor alumni
                 </h5>
+                <p class="text-black-50 mb-1">
+                  <b>2025</b><br>
+                  Zhengdan Xia (MSc Information Studies)<br>
+                  Amina Izbassar (MSc AI)<br>
+                  Mabel Traube (BSc AI)<br>
+                </p>
                 <p class="text-black-50 mb-1">
                   <b>2024</b><br>
                   Esmée de Roo (BA Linguistics)<br>
